# ComfyUI-Simple-Video-XY-Plot

./: MANIFEST.in  README.md  __init__.py  pyproject.toml
assets/: VideoXYBasic.json  VideoXYBasic.webm
cline_docs/: dev_docs.md
src/video_xy_plot/: nodes.py
tests/: __init__.py  test_video_xy_plot.py
